k8-manifests/service/ingress/nginx-deployment-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-1
  labels:
    stackroute.k8: nginx-deployment-1
spec:
  replicas: 2
  selector:
    matchLabels:
      stackroute.k8: nginx-deployment-1
  template:
    metadata:
      labels:
        stackroute.k8: nginx-deployment-1
    spec:
      containers:
      - name: nginx-container-1
        image: nginx:1.7.9
        ports:
        - containerPort: 80
