k8-manifests/service/ingress/nginx-deployment-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-2
  labels:
    stackroute.k8: nginx-deployment-2
spec:
  replicas: 2
  selector:
    matchLabels:
      stackroute.k8: nginx-deployment-2
  template:
    metadata:
      labels:
        stackroute.k8: nginx-deployment-2
    spec:
      containers:
        - name: nginx-container-2
          image: nginx
          ports:
            - containerPort: 80
