k8-manifests/service/ingress/nodeport-svc-1.yml
#k8-manifests\service\nodeport-svc-1.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-svc-1
  labels:
    stackroute.k8: nodeport-svc-1
spec:
  type: NodePort
  selector:
    stackroute.k8: nginx-deployment-1
  ports:
   - nodePort: 31000
     port: 82
     targetPort: 80
