k8-manifests/service/ingress/ingress-route.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: / #Target URI where the traffic must be redirected
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: nodeport-svc-1
            servicePort: 82
        - path: /v2/*
          backend:
            serviceName: nodeport-svc-2
            servicePort: 90
