k8-manifests/service/ingress/ingress.yml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
        - path: /
          backend:
            serviceName: nodeport-svc-1
            servicePort: 82
